Struktur abgeflacht, Referenzen korrigiert

--- a/artikel/01.tex
+++ b/artikel/01.tex
@@ -2,8 +2,6 @@
 \chapter{Gegenstand und Ziele}
 \label{ch:1}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Diese Verordnung enthält Vorschriften zum Schutz natürlicher Personen bei der \hyperref[itm:04-2]
@@ -21,4 +19,4 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
