--- a/artikel/03.tex
+++ b/artikel/03.tex
@@ -2,8 +2,6 @@
 \chapter{Räumlicher Anwendungsbereich}
 \label{ch:3}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Diese Verordnung findet Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
@@ -40,5 +38,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
