--- a/artikel/05.tex
+++ b/artikel/05.tex
@@ -2,8 +2,6 @@
 \chapter{Grundsätze für die Verarbeitung personenbezogener Daten}
 \label{ch:5}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item \hyperref[itm:04-1]{Personenbezogene Daten} müssen%
@@ -56,5 +54,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
