--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -2,8 +2,6 @@
 \chapter{Rechtmäßigkeit der Verarbeitung}
 \label{ch:6}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-2]{Verarbeitung} ist nur rechtmäßig, wenn mindestens eine der nachstehenden Bedingungen
@@ -121,5 +119,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
