--- a/artikel/07.tex
+++ b/artikel/07.tex
@@ -2,8 +2,6 @@
 \chapter{Bedingungen für die Einwilligung}
 \label{ch:7}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Beruht die \hyperref[itm:04-2]{Verarbeitung} auf einer \hyperref[itm:04-11]{Einwilligung}, muss der \hyperref
@@ -36,5 +34,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
