--- a/artikel/08.tex
+++ b/artikel/08.tex
@@ -2,11 +2,9 @@
 \chapter{Bedingungen für die Einwilligung eines Kindes in Bezug auf Dienste der Informationsgesellschaft}
 \label{ch:8}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
-  \item Gilt \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} bei einem Angebot von \hyperref[itm:04-28]
+  \item Gilt \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} bei einem Angebot von \hyperref[itm:04-25]
    {Diensten der Informationsgesellschaft}, das einem Kind direkt gemacht wird, so ist die \hyperref[itm:04-2]
    {Verarbeitung} der \hyperref[itm:04-1]{personenbezogenen Daten} des Kindes rechtmäßig, wenn das Kind das sechzehnte
    Lebensjahr vollendet hat. Hat das Kind noch nicht das sechzehnte Lebensjahr vollendet, so ist diese \hyperref
@@ -28,5 +26,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
