--- a/artikel/09.tex
+++ b/artikel/09.tex
@@ -2,8 +2,6 @@
 \chapter{Verarbeitung besonderer Kategorien personenbezogener Daten}
 \label{ch:9}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, aus denen die rassische und
@@ -108,5 +106,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
