--- a/artikel/10.tex
+++ b/artikel/10.tex
@@ -2,8 +2,6 @@
 \chapter{Verarbeitung von personenbezogenen Daten über strafrechtliche Verurteilungen und Straftaten}
 \label{ch:10}
 
-\addsec{Text der Verordnung}
-
 Die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} über strafrechtliche Verurteilungen
 und Straftaten oder damit zusammenhängende Sicherungsmaßregeln aufgrund von \hyperref[itm:06-1]{Artikel 6 Absatz 1}
 darf nur unter behördlicher Aufsicht vorgenommen werden oder wenn dies nach dem Unionsrecht oder dem Recht der
@@ -11,5 +9,5 @@ Mitgliedstaaten, das geeignete Garantien für die Rechte und Freiheiten der \hyp
 vorsieht, zulässig ist. Ein umfassendes Register der strafrechtlichen Verurteilungen darf nur unter behördlicher
 Aufsicht geführt werden.
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
