--- a/artikel/11.tex
+++ b/artikel/11.tex
@@ -2,8 +2,6 @@
 \chapter{Verarbeitung, für die eine Identifizierung der betroffenen Person nicht erforderlich ist}
 \label{ch:11}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Ist für die Zwecke, für die ein \hyperref[itm:04-7]{Verantwortlicher} \hyperref[itm:04-1]
@@ -23,5 +21,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
