--- a/artikel/13.tex
+++ b/artikel/13.tex
@@ -2,8 +2,6 @@
 \chapter{Informationspflicht bei Erhebung von personenbezogenen Daten bei der betroffenen Person}
 \label{ch:13}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Werden \hyperref[itm:04-1]{personenbezogene Daten} bei der \hyperref[itm:04-1]{betroffenen Person} erhoben, so
@@ -36,7 +34,7 @@
 
     \item gegebenenfalls die Absicht des \hyperref[itm:04-7]{Verantwortlichen}, die \hyperref[itm:04-1]
      {personenbezogenen Daten} an ein Drittland oder eine
-     \hyperref[itm:04-29]{internationale Organisation} zu übermitteln, sowie das Vorhandensein oder das Fehlen eines
+     \hyperref[itm:04-26]{internationale Organisation} zu übermitteln, sowie das Vorhandensein oder das Fehlen eines
       Angemessenheitsbeschlusses der Kommission oder im Falle von Übermittlungen gemäß \hyperref[ch:46]{Artikel 46}
       oder
      \hyperref[ch:47]{Artikel 47} oder \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} einen Verweis auf die
@@ -101,5 +99,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
