--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -2,8 +2,6 @@
 \chapter{Informationspflicht, wenn die personenbezogenen Daten nicht bei der betroffenen Person erhoben wurden}
 \label{ch:14}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Werden \hyperref[itm:04-1]{personenbezogene Daten} nicht bei der \hyperref[itm:04-1]{betroffenen Person}
@@ -150,5 +148,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
