--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -2,8 +2,6 @@
 \chapter{Auskunftsrecht der betroffenen Person}
 \label{ch:15}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]{Verantwortlichen} eine
@@ -51,7 +49,7 @@
 
   \end{enumerate}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder an eine \hyperref[itm:04-29]
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder an eine \hyperref[itm:04-26]
    {internationale Organisation} übermittelt, so hat die
    \hyperref[itm:04-1]{betroffene Person} das Recht, über die geeigneten Garantien gemäß \hyperref[ch:46]{Artikel 46} im
     Zusammenhang mit der Übermittlung unterrichtet zu werden.%
@@ -71,5 +69,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
