--- a/artikel/17.tex
+++ b/artikel/17.tex
@@ -2,8 +2,6 @@
 \chapter{Recht auf Löschung („Recht auf Vergessenwerden“)}
 \label{ch:17}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]{Verantwortlichen} zu
@@ -39,7 +37,7 @@
      {Verantwortliche} unterliegt.%
     \label{itm:17-1e}
 
-    \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden in Bezug auf angebotene \hyperref[itm:04-28]
+    \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden in Bezug auf angebotene \hyperref[itm:04-25]
      {Dienste der Informationsgesellschaft} gemäß
      \hyperref[itm:08-1]{Artikel 8 Absatz 1} erhoben.%
     \label{itm:17-1f}
@@ -88,5 +86,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
