--- a/artikel/18.tex
+++ b/artikel/18.tex
@@ -2,8 +2,6 @@
 \chapter{Recht auf Einschränkung der Verarbeitung}
 \label{ch:18}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]
@@ -53,5 +51,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
