--- a/artikel/19.tex
+++ b/artikel/19.tex
@@ -3,8 +3,6 @@
  Einschränkung der Verarbeitung}
 \label{ch:19}
 
-\addsec{Text der Verordnung}
-
 Der \hyperref[itm:04-7]{Verantwortliche} teilt allen \hyperref[itm:04-9]{Empfängern}, denen \hyperref[itm:04-1]
 {personenbezogenen Daten} offengelegt wurden, jede Berichtigung oder Löschung der \hyperref[itm:04-1]
 {personenbezogenen Daten} oder eine \hyperref[itm:04-3]{Einschränkung der Verarbeitung} nach \hyperref[ch:16]
@@ -14,5 +12,5 @@ Der \hyperref[itm:04-7]{Verantwortliche} teilt allen \hyperref[itm:04-9]{Empfän
  {Verantwortliche} unterrichtet die \hyperref[itm:04-1]{betroffene Person} über diese \hyperref[itm:04-9]
  {Empfänger}, wenn die \hyperref[itm:04-1]{betroffene Person} dies verlangt.
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
