--- a/artikel/20.tex
+++ b/artikel/20.tex
@@ -2,8 +2,6 @@
 \chapter{Recht auf Datenübertragbarkeit}
 \label{ch:20}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, die sie betreffenden \hyperref[itm:04-1]
@@ -46,5 +44,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
