--- a/artikel/21.tex
+++ b/artikel/21.tex
@@ -2,8 +2,6 @@
 \chapter{Widerspruchsrecht}
 \label{ch:21}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation
@@ -34,7 +32,7 @@
    werden; dieser Hinweis hat in einer verständlichen und von anderen Informationen getrennten Form zu erfolgen.%
   \label{itm:21-4}
 
-  \item Im Zusammenhang mit der Nutzung von \hyperref[itm:04-28]{Diensten der Informationsgesellschaft} kann
+  \item Im Zusammenhang mit der Nutzung von \hyperref[itm:04-25]{Diensten der Informationsgesellschaft} kann
    die \hyperref[itm:04-1]{betroffene Person} ungeachtet der Richtlinie 2002/58/EG ihr Widerspruchsrecht mittels
    automatisierter Verfahren ausüben, bei denen technische Spezifikationen verwendet werden.%
   \label{itm:21-5}
@@ -48,7 +46,7 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
 \begin{itemize}
 
