--- a/artikel/22.tex
+++ b/artikel/22.tex
@@ -2,8 +2,6 @@
 \chapter{Automatisierte Entscheidungen im Einzelfall einschließlich Profiling}
 \label{ch:22}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, nicht einer ausschließlich auf einer
@@ -48,5 +46,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
