--- a/artikel/23.tex
+++ b/artikel/23.tex
@@ -2,8 +2,6 @@
 \chapter{Beschränkungen}
 \label{ch:23}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Durch Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der \hyperref[itm:04-7]{Verantwortliche} oder
@@ -94,5 +92,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
