--- a/artikel/25.tex
+++ b/artikel/25.tex
@@ -2,8 +2,6 @@
 \chapter{Datenschutz durch Technikgestaltung und durch datenschutzfreundliche Voreinstellungen}
 \label{ch:25}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Unter Berücksichtigung des Stands der Technik, der Implementierungskosten und der Art, des Umfangs, der Umstände
@@ -36,5 +34,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
