--- a/artikel/26.tex
+++ b/artikel/26.tex
@@ -2,8 +2,6 @@
 \chapter{Gemeinsam Verantwortliche}
 \label{ch:26}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Legen zwei oder mehr \hyperref[itm:04-7]{Verantwortliche} gemeinsam die Zwecke der und die Mittel zur \hyperref
@@ -29,5 +27,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
