--- a/artikel/27.tex
+++ b/artikel/27.tex
@@ -2,8 +2,6 @@
 \chapter{Vertreter von nicht in der Union niedergelassenen Verantwortlichen oder Auftragsverarbeitern}
 \label{ch:27}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item In den Fällen gemäß \hyperref[itm:03-2]{Artikel 3 Absatz 2} benennt der \hyperref[itm:04-7]
@@ -50,5 +48,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
