--- a/artikel/28.tex
+++ b/artikel/28.tex
@@ -2,8 +2,6 @@
 \chapter{Auftragsverarbeiter}
 \label{ch:28}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Erfolgt eine \hyperref[itm:04-2]{Verarbeitung} im Auftrag eines \hyperref[itm:04-7]{Verantwortlichen}, so
@@ -35,7 +33,7 @@
   
     \item die \hyperref[itm:04-1]{personenbezogenen Daten} nur auf dokumentierte Weisung des \hyperref[itm:04-7]
      {Verantwortlichen} -- auch in Bezug auf die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein
-     Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} -- verarbeitet, sofern er nicht durch das
+     Drittland oder eine \hyperref[itm:04-26]{internationale Organisation} -- verarbeitet, sofern er nicht durch das
      Recht der Union oder der Mitgliedstaaten, dem der \hyperref[itm:04-8]{Auftragsverarbeiter} unterliegt, hierzu
      verpflichtet ist; in einem solchen Fall teilt der \hyperref[itm:04-8]{Auftragsverarbeiter} dem \hyperref[itm:04-7]
      {Verantwortlichen} diese rechtlichen Anforderungen vor der \hyperref[itm:04-2]{Verarbeitung} mit, sofern das
@@ -137,5 +135,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
