--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -2,8 +2,6 @@
 \chapter{Verzeichnis von Verarbeitungstätigkeiten}
 \label{ch:30}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jeder \hyperref[itm:04-7]{Verantwortliche} und gegebenenfalls sein \hyperref[itm:04-17]{Vertreter} führen ein
@@ -31,7 +29,7 @@
     \label{itm:30-1d}
 
     \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an
-     eine \hyperref[itm:04-29]{internationale Organisation}, einschließlich der Angabe des betreffenden Drittlands oder
+     eine \hyperref[itm:04-26]{internationale Organisation}, einschließlich der Angabe des betreffenden Drittlands oder
      der betreffenden internationalen Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1
      Unterabsatz 2} genannten Datenübermittlungen die Dokumentierung geeigneter Garantien;%
     \label{itm:30-1e}
@@ -65,7 +63,7 @@
     \label{itm:30-2b}
 
     \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an
-     eine \hyperref[itm:04-29]{internationale Organisation}, einschließlich der Angabe des betreffenden Drittlands oder
+     eine \hyperref[itm:04-26]{internationale Organisation}, einschließlich der Angabe des betreffenden Drittlands oder
      der betreffenden internationalen Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1
      Unterabsatz 2} genannten Datenübermittlungen die Dokumentierung geeigneter Garantien;%
     \label{itm:30-2c}
@@ -99,5 +97,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
