--- a/artikel/32.tex
+++ b/artikel/32.tex
@@ -2,8 +2,6 @@
 \chapter{Sicherheit der Verarbeitung}
 \label{ch:32}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Unter Berücksichtigung des Stands der Technik, der Implementierungskosten und der Art, des Umfangs, der Umstände
@@ -56,5 +54,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
