--- a/artikel/33.tex
+++ b/artikel/33.tex
@@ -2,8 +2,6 @@
 \chapter{Meldung von Verletzungen des Schutzes personenbezogener Daten an die Aufsichtsbehörde}
 \label{ch:33}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Im Falle einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} meldet der \hyperref
@@ -58,5 +56,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
