--- a/artikel/34.tex
+++ b/artikel/34.tex
@@ -2,8 +2,6 @@
 \chapter{Benachrichtigung der von einer Verletzung des Schutzes personenbezogener Daten betroffenen Person}
 \label{ch:34}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Hat die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich ein hohes Risiko
@@ -53,5 +51,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
