--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -2,8 +2,6 @@
 \chapter{Datenschutz-Folgenabschätzung}
 \label{ch:35}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Hat eine Form der \hyperref[itm:04-2]{Verarbeitung}, insbesondere bei Verwendung neuer Technologien, aufgrund
@@ -115,5 +113,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
