--- a/artikel/36.tex
+++ b/artikel/36.tex
@@ -2,8 +2,6 @@
 \chapter{Vorherige Konsultation}
 \label{ch:36}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} konsultiert vor der \hyperref[itm:04-2]{Verarbeitung} die \hyperref
@@ -71,5 +69,5 @@
    
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
