--- a/artikel/37.tex
+++ b/artikel/37.tex
@@ -2,8 +2,6 @@
 \chapter{Benennung eines Datenschutzbeauftragten}
 \label{ch:37}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} benennen auf jeden
@@ -64,5 +62,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
