--- a/artikel/38.tex
+++ b/artikel/38.tex
@@ -2,8 +2,6 @@
 \chapter{Stellung des Datenschutzbeauftragten}
 \label{ch:38}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} stellen sicher, dass
@@ -43,5 +41,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
