--- a/artikel/39.tex
+++ b/artikel/39.tex
@@ -2,8 +2,6 @@
 \chapter{Aufgaben des Datenschutzbeauftragten}
 \label{ch:39}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Dem Datenschutzbeauftragten obliegen zumindest folgende Aufgaben:%
@@ -45,5 +43,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
