--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -2,8 +2,6 @@
 \chapter{Verhaltensregeln}
 \label{ch:40}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern die
@@ -50,7 +48,7 @@
      solchen \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten};%
     \label{itm:40-2i}
 
-    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder an \hyperref[itm:04-29]
+    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder an \hyperref[itm:04-26]
      {internationale Organisationen} oder%
     \label{itm:40-2j}
 
@@ -68,7 +66,7 @@
    vorliegenden Artikels} allgemeine Gültigkeit besitzen, auch von \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref
    [itm:04-8]{Auftragsverarbeitern}, die gemäß \hyperref[ch:3]{Artikel 3} nicht unter diese Verordnung fallen,
    eingehalten werden, um geeignete Garantien im Rahmen der Übermittlung \hyperref[itm:04-1]{personenbezogener Daten}
-   an Drittländer oder \hyperref[itm:04-29]{internationale Organisationen} nach Maßgabe des \hyperref[itm:46-2e]
+   an Drittländer oder \hyperref[itm:04-26]{internationale Organisationen} nach Maßgabe des \hyperref[itm:46-2e]
    {Artikels 46 Absatz 2 Buchstabe e} zu bieten. Diese \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]
    {Auftragsverarbeiter} gehen mittels vertraglicher oder sonstiger rechtlich bindender Instrumente die verbindliche
    und durchsetzbare Verpflichtung ein, die geeigneten Garantien anzuwenden, auch im Hinblick auf die Rechte
@@ -129,5 +127,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
