--- a/artikel/41.tex
+++ b/artikel/41.tex
@@ -2,8 +2,6 @@
 \chapter{Überwachung der genehmigten Verhaltensregeln}
 \label{ch:41}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß den
@@ -66,5 +64,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
