--- a/artikel/42.tex
+++ b/artikel/42.tex
@@ -2,8 +2,6 @@
 \chapter{Zertifizierung}
 \label{ch:42}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern
@@ -21,7 +19,7 @@
    genehmigt worden sind, vorgesehen werden, um nachzuweisen, dass die
    \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter}, die gemäß \hyperref[ch:3]
     {Artikel 3} nicht unter diese Verordnung fallen, im Rahmen der Übermittlung \hyperref[itm:04-1]
-    {personenbezogener Daten} an Drittländer oder \hyperref[itm:04-29]{internationale Organisationen} nach Maßgabe
+    {personenbezogener Daten} an Drittländer oder \hyperref[itm:04-26]{internationale Organisationen} nach Maßgabe
     von \hyperref[itm:46-2f]{Artikel 46 Absatz 2 Buchstabe f} geeignete Garantien bieten. Diese \hyperref[itm:04-7]
     {Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gehen mittels vertraglicher oder sonstiger
     rechtlich bindender Instrumente die verbindliche und durchsetzbare Verpflichtung ein, diese geeigneten Garantien
@@ -68,5 +66,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
