--- a/artikel/43.tex
+++ b/artikel/43.tex
@@ -2,8 +2,6 @@
 \chapter{Zertifizierungsstellen}
 \label{ch:43}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß den
@@ -106,5 +104,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
