--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -2,14 +2,12 @@
 \chapter{Datenübermittlung vorbehaltlich geeigneter Garantien}
 \label{ch:46}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Falls kein Beschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt, darf ein \hyperref[itm:04-7]
    {Verantwortlicher} oder ein
    \hyperref[itm:04-8]{Auftragsverarbeiter} \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder
-    eine \hyperref[itm:04-29]{internationale Organisation} nur übermitteln, sofern der \hyperref[itm:04-7]
+    eine \hyperref[itm:04-26]{internationale Organisation} nur übermitteln, sofern der \hyperref[itm:04-7]
     {Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete Garantien vorgesehen hat und sofern
     den
    \hyperref[itm:04-1]{betroffenen Personen} durchsetzbare Rechte und wirksame Rechtsbehelfe zur Verfügung stehen.%
@@ -84,5 +82,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
