--- a/artikel/48.tex
+++ b/artikel/48.tex
@@ -2,8 +2,6 @@
 \chapter{Nach dem Unionsrecht nicht zulässige Übermittlung oder Offenlegung}
 \label{ch:48}
 
-\addsec{Text der Verordnung}
-
 Jegliches Urteil eines Gerichts eines Drittlands und jegliche Entscheidung einer Verwaltungsbehörde eines Drittlands,
 mit denen von einem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-8]{Auftragsverarbeiter} die
 Übermittlung oder Offenlegung personenbezogener Daten verlangt wird, dürfen unbeschadet anderer Gründe für die
@@ -11,5 +9,5 @@ mit denen von einem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[i
 befindliche internationale Übereinkunft wie etwa ein Rechtshilfeabkommen zwischen dem ersuchenden Drittland und der
 Union oder einem Mitgliedstaat gestützt sind.
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
