--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -2,14 +2,12 @@
 \chapter{Ausnahmen für bestimmte Fälle}
 \label{ch:49}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Falls weder ein Angemessenheitsbeschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt noch geeignete
    Garantien nach \hyperref[ch:46]{Artikel 46}, einschließlich \hyperref[itm:04-20]{verbindlicher interner
    Datenschutzvorschriften}, bestehen, ist eine Übermittlung oder eine Reihe von Übermittlungen \hyperref[itm:04-1]
-   {personenbezogener Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale Organisation} nur unter
+   {personenbezogener Daten} an ein Drittland oder an eine \hyperref[itm:04-26]{internationale Organisation} nur unter
    einer der folgenden Bedingungen zulässig:%
   \label{itm:49-1-1}
 
@@ -54,7 +52,7 @@
   \phantomsection Falls die Übermittlung nicht auf eine Bestimmung der Artikel \hyperref[ch:45]{45} oder \hyperref
    [ch:46]{46} -- einschließlich der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} -- gestützt
    werden könnte und keine der Ausnahmen für einen bestimmten Fall gemäß dem ersten Unterabsatz anwendbar ist, darf
-   eine Übermittlung an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} nur dann erfolgen,
+   eine Übermittlung an ein Drittland oder eine \hyperref[itm:04-26]{internationale Organisation} nur dann erfolgen,
    wenn die Übermittlung nicht wiederholt erfolgt, nur eine begrenzte Zahl von \hyperref[itm:04-1]
    {betroffenen Personen} betrifft, für die Wahrung der zwingenden berechtigten Interessen des
   \hyperref[itm:04-7]{Verantwortlichen} erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten
@@ -86,7 +84,7 @@
   \item Liegt kein Angemessenheitsbeschluss vor, so können im Unionsrecht oder im Recht der Mitgliedstaaten aus
    wichtigen Gründen des öffentlichen Interesses ausdrücklich Beschränkungen der Übermittlung bestimmter Kategorien
    von
-   \hyperref[itm:04-1]{personenbezogenen Daten} an Drittländer oder \hyperref[itm:04-29]{internationale Organisationen}
+   \hyperref[itm:04-1]{personenbezogenen Daten} an Drittländer oder \hyperref[itm:04-26]{internationale Organisationen}
     vorgesehen werden. Die Mitgliedstaaten teilen der Kommission derartige Bestimmungen mit.%
   \label{itm:49-5}
 
@@ -97,5 +95,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
