--- a/artikel/50.tex
+++ b/artikel/50.tex
@@ -2,9 +2,7 @@
 \chapter{Internationale Zusammenarbeit zum Schutz personenbezogener Daten}
 \label{ch:50}
 
-\addsec{Text der Verordnung}
-
-In Bezug auf Drittländer und \hyperref[itm:04-29]{internationale Organisationen} treffen die Kommission und
+In Bezug auf Drittländer und \hyperref[itm:04-26]{internationale Organisationen} treffen die Kommission und
 die \hyperref[itm:04-21]{Aufsichtsbehörden} geeignete Maßnahmen zur
 
 \begin{enumerate}[label=\alph*)]
@@ -30,5 +28,5 @@ die \hyperref[itm:04-21]{Aufsichtsbehörden} geeignete Maßnahmen zur
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
