--- a/artikel/51.tex
+++ b/artikel/51.tex
@@ -2,8 +2,6 @@
 \chapter{Aufsichtsbehörde}
 \label{ch:51}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jeder Mitgliedstaat sieht vor, dass eine oder mehrere unabhängige Behörden für die Überwachung der Anwendung
@@ -30,5 +28,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
