--- a/artikel/52.tex
+++ b/artikel/52.tex
@@ -2,8 +2,6 @@
 \chapter{Unabhängigkeit}
 \label{ch:52}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} handelt bei der Erfüllung ihrer Aufgaben und bei der Ausübung ihrer
@@ -38,5 +36,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
