--- a/artikel/53.tex
+++ b/artikel/53.tex
@@ -2,8 +2,6 @@
 \chapter{Allgemeine Bedingungen für die Mitglieder der Aufsichtsbehörde}
 \label{ch:53}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Mitgliedstaaten sehen vor, dass jedes Mitglied ihrer \hyperref[itm:04-21]{Aufsichtsbehörden} im Wege eines
@@ -32,5 +30,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
