--- a/artikel/54.tex
+++ b/artikel/54.tex
@@ -2,8 +2,6 @@
 \chapter{Errichtung der Aufsichtsbehörde}
 \label{ch:54}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jeder Mitgliedstaat sieht durch Rechtsvorschriften Folgendes vor:%
@@ -50,5 +48,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
