--- a/artikel/55.tex
+++ b/artikel/55.tex
@@ -2,8 +2,6 @@
 \chapter{Zuständigkeit}
 \label{ch:55}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} ist für die Erfüllung der Aufgaben und die Ausübung der Befugnisse,
@@ -22,5 +20,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
