--- a/artikel/56.tex
+++ b/artikel/56.tex
@@ -2,8 +2,6 @@
 \chapter{Zuständigkeit der federführenden Aufsichtsbehörde}
 \label{ch:56}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Unbeschadet des \hyperref[ch:55]{Artikels 55} ist die \hyperref[itm:04-21]{Aufsichtsbehörde} der \hyperref
@@ -53,5 +51,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
