--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -2,8 +2,6 @@
 \chapter{Aufgaben}
 \label{ch:57}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Unbeschadet anderer in dieser Verordnung dargelegter Aufgaben muss jede \hyperref[itm:04-21]
@@ -125,5 +123,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
