--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -2,8 +2,6 @@
 \chapter{Befugnisse}
 \label{ch:58}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Untersuchungsbefugnisse, die es ihr
@@ -90,7 +88,7 @@
     \label{itm:58-2i}
 
     \item die Aussetzung der Übermittlung von Daten an einen \hyperref[itm:04-9]{Empfänger} in einem Drittland oder an
-     eine \hyperref[itm:04-29]{internationale Organisation} anzuordnen.%
+     eine \hyperref[itm:04-26]{internationale Organisation} anzuordnen.%
     \label{itm:58-2j}
 
   \end{enumerate}
@@ -160,5 +158,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
