--- a/artikel/60.tex
+++ b/artikel/60.tex
@@ -2,8 +2,6 @@
 \chapter{Zusammenarbeit zwischen der federführenden Aufsichtsbehörde und den anderen betroffenen Aufsichtsbehörden}
 \label{ch:60}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} arbeitet mit den anderen \hyperref[itm:04-22]
@@ -28,13 +26,13 @@
 
   \item Legt eine der anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} innerhalb von vier Wochen, nachdem sie
    gemäß \hyperref[itm:60-3]{Absatz 3 des vorliegenden Artikels} konsultiert wurde, gegen diesen Beschlussentwurf
-   einen \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} ein und schließt sich die federführende \hyperref
-   [itm:04-21]{Aufsichtsbehörde} dem \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} nicht an oder ist der
+   einen \hyperref[itm:04-24]{maßgeblichen und begründeten Einspruch} ein und schließt sich die federführende \hyperref
+   [itm:04-21]{Aufsichtsbehörde} dem \hyperref[itm:04-24]{maßgeblichen und begründeten Einspruch} nicht an oder ist der
    Ansicht, dass der Einspruch nicht maßgeblich oder nicht begründet ist, so leitet die federführende \hyperref
    [itm:04-21]{Aufsichtsbehörde} das Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63} für die Angelegenheit ein.%
   \label{itm:60-4}
 
-  \item Beabsichtigt die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, sich dem \hyperref[itm:04-27]
+  \item Beabsichtigt die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, sich dem \hyperref[itm:04-24]
    {maßgeblichen und begründeten Einspruch} anzuschließen, so legt sie den anderen \hyperref[itm:04-22]
    {betroffenen Aufsichtsbehörden} einen überarbeiteten Beschlussentwurf zur Stellungnahme vor. Der überarbeitete
    Beschlussentwurf wird innerhalb von zwei Wochen dem Verfahren nach \hyperref[itm:60-4]{Absatz 4} unterzogen.%
@@ -97,5 +95,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
