--- a/artikel/61.tex
+++ b/artikel/61.tex
@@ -2,8 +2,6 @@
 \chapter{Gegenseitige Amtshilfe}
 \label{ch:61}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörden} übermitteln einander maßgebliche Informationen und gewähren einander
@@ -75,5 +73,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
