--- a/artikel/62.tex
+++ b/artikel/62.tex
@@ -2,8 +2,6 @@
 \chapter{Gemeinsame Maßnahmen der Aufsichtsbehörden}
 \label{ch:62}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörden} führen gegebenenfalls gemeinsame Maßnahmen einschließlich
@@ -67,5 +65,5 @@
 
 \end{enumerate}   
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
