--- a/artikel/65.tex
+++ b/artikel/65.tex
@@ -2,8 +2,6 @@
 \chapter{Streitbeilegung durch den Ausschuss}
 \label{ch:65}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Um die ordnungsgemäße und einheitliche Anwendung dieser Verordnung in Einzelfällen sicherzustellen, erlässt der
@@ -13,10 +11,10 @@
   \begin{enumerate}
   
     \item wenn eine \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} in einem Fall nach \hyperref[itm:60-4]{Artikel 60
-     Absatz 4} einen \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} gegen einen Beschlussentwurf der
+     Absatz 4} einen \hyperref[itm:04-24]{maßgeblichen und begründeten Einspruch} gegen einen Beschlussentwurf der
      federführenden Behörde eingelegt hat und sich die federführende Aufsichtsbehörde dem Einspruch nicht angeschlossen
      hat oder den Einspruch als nicht maßgeblich oder nicht begründet abgelehnt hat. Der verbindliche Beschluss
-     betrifft alle Angelegenheiten, die Gegenstand des \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch}s
+     betrifft alle Angelegenheiten, die Gegenstand des \hyperref[itm:04-24]{maßgeblichen und begründeten Einspruch}s
      sind, insbesondere die Frage, ob ein Verstoß gegen diese Verordnung vorliegt;%
     \label{itm:65-1a}
 
@@ -74,5 +72,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
