--- a/artikel/66.tex
+++ b/artikel/66.tex
@@ -2,8 +2,6 @@
 \chapter{Dringlichkeitsverfahren}
 \label{ch:66}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Unter außergewöhnlichen Umständen kann eine \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} abweichend vom
@@ -35,5 +33,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
