--- a/artikel/67.tex
+++ b/artikel/67.tex
@@ -2,8 +2,6 @@
 \chapter{Informationsaustausch}
 \label{ch:67}
 
-\addsec{Text der Verordnung}
-
 Die Kommission kann Durchführungsrechtsakte von allgemeiner Tragweite zur Festlegung der Ausgestaltung des
 elektronischen Informationsaustauschs zwischen den \hyperref[itm:04-21]{Aufsichtsbehörden} sowie zwischen den \hyperref
 [itm:04-21]{Aufsichtsbehörden} und dem Ausschuss, insbesondere des standardisierten Formats nach \hyperref[ch:64]
@@ -11,5 +9,5 @@ elektronischen Informationsaustauschs zwischen den \hyperref[itm:04-21]{Aufsicht
 
 Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} erlassen.  
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
