--- a/artikel/68.tex
+++ b/artikel/68.tex
@@ -2,8 +2,6 @@
 \chapter{Europäischer Datenschutzausschuss}
 \label{ch:68}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der Europäische Datenschutzausschuss (im Folgenden „Ausschuss“) wird als Einrichtung der Union mit eigener
@@ -34,5 +32,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
