--- a/artikel/69.tex
+++ b/artikel/69.tex
@@ -2,8 +2,6 @@
 \chapter{Unabhängigkeit}
 \label{ch:69}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der Ausschuss handelt bei der Erfüllung seiner Aufgaben oder in Ausübung seiner Befugnisse gemäß den Artikeln
@@ -17,5 +15,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
