--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -2,8 +2,6 @@
 \chapter{Aufgaben des Ausschusses}
 \label{ch:70}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der Ausschuss stellt die einheitliche Anwendung dieser Verordnung sicher. Hierzu nimmt der Ausschuss von sich
@@ -109,7 +107,7 @@
 
     \item Abgabe einer Stellungnahme für die Kommission zur Beurteilung der Angemessenheit des in einem Drittland oder
      einer internationalen Organisation gebotenen Schutzniveaus einschließlich zur Beurteilung der Frage, ob das
-     Drittland, das Gebiet, ein oder mehrere spezifische Sektoren in diesem Drittland oder eine \hyperref[itm:04-29]
+     Drittland, das Gebiet, ein oder mehrere spezifische Sektoren in diesem Drittland oder eine \hyperref[itm:04-26]
      {internationale Organisation} kein angemessenes Schutzniveau mehr gewährleistet. Zu diesem Zweck gibt die
      Kommission dem Ausschuss alle erforderlichen Unterlagen, darunter den Schriftwechsel mit der Regierung des
      Drittlands, dem Gebiet oder spezifischen Sektor oder der internationalen Organisation;%
@@ -159,5 +157,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
