--- a/artikel/71.tex
+++ b/artikel/71.tex
@@ -2,8 +2,6 @@
 \chapter{Berichterstattung}
 \label{ch:71}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der Ausschuss erstellt einen Jahresbericht über den Schutz natürlicher Personen bei der \hyperref[itm:04-2]
@@ -18,5 +16,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
