--- a/artikel/72.tex
+++ b/artikel/72.tex
@@ -2,8 +2,6 @@
 \chapter{Verfahrensweise}
 \label{ch:72}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Sofern in dieser Verordnung nichts anderes bestimmt ist, fasst der Ausschuss seine Beschlüsse mit einfacher
@@ -16,5 +14,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
