--- a/artikel/73.tex
+++ b/artikel/73.tex
@@ -2,8 +2,6 @@
 \chapter{Vorsitz}
 \label{ch:73}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der Ausschuss wählt aus dem Kreis seiner Mitglieder mit einfacher Mehrheit einen Vorsitzenden und zwei
@@ -16,5 +14,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
