--- a/artikel/74.tex
+++ b/artikel/74.tex
@@ -2,8 +2,6 @@
 \chapter{Aufgaben des Vorsitzes}
 \label{ch:74}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der Vorsitz hat folgende Aufgaben:%
@@ -30,5 +28,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
