--- a/artikel/75.tex
+++ b/artikel/75.tex
@@ -2,8 +2,6 @@
 \chapter{Sekretariat}
 \label{ch:75}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der Ausschuss wird von einem Sekretariat unterstützt, das von dem Europäischen Datenschutzbeauftragten
@@ -59,5 +57,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
