--- a/artikel/76.tex
+++ b/artikel/76.tex
@@ -2,8 +2,6 @@
 \chapter{Vertraulichkeit}
 \label{ch:76}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Beratungen des Ausschusses sind gemäß seiner Geschäftsordnung vertraulich, wenn der Ausschuss dies für
@@ -17,5 +15,5 @@
 
 \end{enumerate}   
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
