--- a/artikel/77.tex
+++ b/artikel/77.tex
@@ -2,8 +2,6 @@
 \chapter{Recht auf Beschwerde bei einer Aufsichtsbehörde}
 \label{ch:77}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder
@@ -20,5 +18,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
