--- a/artikel/78.tex
+++ b/artikel/78.tex
@@ -2,8 +2,6 @@
 \chapter{Recht auf wirksamen gerichtlichen Rechtsbehelf gegen eine Aufsichtsbehörde}
 \label{ch:78}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jede natürliche oder juristische Person hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder
@@ -31,5 +29,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
