--- a/artikel/79.tex
+++ b/artikel/79.tex
@@ -2,8 +2,6 @@
 \chapter{Recht auf wirksamen gerichtlichen Rechtsbehelf gegen Verantwortliche oder Auftragsverarbeiter}
 \label{ch:79}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines verfügbaren verwaltungsrechtlichen oder
@@ -25,5 +23,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
