--- a/artikel/80.tex
+++ b/artikel/80.tex
@@ -2,8 +2,6 @@
 \chapter{Vertretung von betroffenen Personen}
 \label{ch:80}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, eine Einrichtung, Organisationen oder Vereinigung ohne
@@ -27,5 +25,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
