--- a/artikel/81.tex
+++ b/artikel/81.tex
@@ -2,8 +2,6 @@
 \chapter{Aussetzung des Verfahrens}
 \label{ch:81}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Erhält ein zuständiges Gericht in einem Mitgliedstaat Kenntnis von einem Verfahren zu demselben Gegenstand in
@@ -25,5 +23,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
