--- a/artikel/82.tex
+++ b/artikel/82.tex
@@ -2,8 +2,6 @@
 \chapter{Haftung und Recht auf Schadenersatz}
 \label{ch:82}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jede Person, der wegen eines Verstoßes gegen diese Verordnung ein materieller oder immaterieller Schaden
@@ -50,5 +48,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
