--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -2,8 +2,6 @@
 \chapter{Allgemeine Bedingungen für die Verhängung von Geldbußen}
 \label{ch:83}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} stellt sicher, dass die Verhängung von Geldbußen gemäß diesem
@@ -111,7 +109,7 @@
     \label{itm:83-5b}
 
     \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an einen \hyperref[itm:04-9]{Empfänger} in einem
-     Drittland oder an eine \hyperref[itm:04-29]{internationale Organisation} gemäß den Artikeln \hyperref[ch:44]
+     Drittland oder an eine \hyperref[itm:04-26]{internationale Organisation} gemäß den Artikeln \hyperref[ch:44]
      {44} bis \hyperref[ch:49]{49};%
     \label{itm:83-5c}
 
@@ -154,5 +152,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
