--- a/artikel/86.tex
+++ b/artikel/86.tex
@@ -2,8 +2,6 @@
 \chapter{Verarbeitung und Zugang der Öffentlichkeit zu amtlichen Dokumenten}
 \label{ch:86}
 
-\addsec{Text der Verordnung}
-
 \hyperref[itm:04-1]{Personenbezogene Daten} in amtlichen Dokumenten, die sich im Besitz einer Behörde oder einer
  öffentlichen Einrichtung oder einer privaten Einrichtung zur Erfüllung einer im öffentlichen Interesse liegenden
  Aufgabe befinden, können von der Behörde oder der Einrichtung gemäß dem Unionsrecht oder dem Recht des Mitgliedstaats,
@@ -11,5 +9,5 @@
  Dokumenten mit dem Recht auf Schutz \hyperref[itm:04-1]{personenbezogener Daten} gemäß dieser Verordnung in Einklang
  zu bringen.
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
