--- a/artikel/90.tex
+++ b/artikel/90.tex
@@ -2,8 +2,6 @@
 \chapter{Geheimhaltungspflichten}
 \label{ch:90}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Mitgliedstaaten können die Befugnisse der \hyperref[itm:04-21]{Aufsichtsbehörden} im Sinne des \hyperref
@@ -26,5 +24,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
