--- a/artikel/91.tex
+++ b/artikel/91.tex
@@ -2,8 +2,6 @@
 \chapter{Bestehende Datenschutzvorschriften von Kirchen und religiösen Vereinigungen oder Gemeinschaften}
 \label{ch:91}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Wendet eine Kirche oder eine religiöse Vereinigung oder Gemeinschaft in einem Mitgliedstaat zum Zeitpunkt des
@@ -20,5 +18,5 @@
    
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
