--- a/artikel/92.tex
+++ b/artikel/92.tex
@@ -2,8 +2,6 @@
 \chapter{Ausübung der Befugnisübertragung}
 \label{ch:92}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Befugnis zum Erlass delegierter Rechtsakte wird der Kommission unter den in diesem Artikel festgelegten
@@ -36,5 +34,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
