--- a/artikel/93.tex
+++ b/artikel/93.tex
@@ -2,8 +2,6 @@
 \chapter{Ausschussverfahren}
 \label{ch:93}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Kommission wird von einem Ausschuss unterstützt. Dieser Ausschuss ist ein Ausschuss im Sinne der Verordnung
@@ -19,5 +17,5 @@
 
 \end{enumerate}   
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
