--- a/artikel/97.tex
+++ b/artikel/97.tex
@@ -2,8 +2,6 @@
 \chapter{Berichte der Kommission}
 \label{ch:97}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Bis zum 25. Mai 2020 und danach alle vier Jahre legt die Kommission dem Europäischen Parlament und dem Rat einen
@@ -18,7 +16,7 @@
   
     \item des \hyperref[part:5]{Kapitels V} über die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an
      Drittländer oder an
-     \hyperref[itm:04-29]{internationale Organisationen} insbesondere im Hinblick auf die gemäß \hyperref[itm:45-3]
+     \hyperref[itm:04-26]{internationale Organisationen} insbesondere im Hinblick auf die gemäß \hyperref[itm:45-3]
       {Artikel 45 Absatz 3} der vorliegenden Verordnung erlassenen Beschlüsse sowie die gemäß Artikel 25 Absatz 6 der
       Richtlinie 95/46/EG
      \todo{Recherche}
@@ -46,5 +44,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
