--- a/artikel/99.tex
+++ b/artikel/99.tex
@@ -2,8 +2,6 @@
 \chapter{Inkrafttreten und Anwendung}
 \label{ch:99}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Diese Verordnung tritt am zwanzigsten Tag nach ihrer Veröffentlichung im Amtsblatt der Europäischen Union in
@@ -15,5 +13,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
