--- a/artikel/12.tex
+++ b/artikel/12.tex
@@ -2,8 +2,6 @@
 \chapter{Transparente Information, Kommunikation und Modalitäten für die Ausübung der Rechte der betroffenen Person}
 \label{ch:12}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} trifft geeignete Maßnahmen, um der \hyperref[itm:04-1]
@@ -84,5 +82,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
