--- a/artikel/16.tex
+++ b/artikel/16.tex
@@ -2,8 +2,6 @@
 \chapter{Recht auf Berichtigung}
 \label{ch:16}
 
-\addsec{Text der Verordnung}
-
 Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]{Verantwortlichen} unverzüglich die
 Berichtigung sie betreffender unrichtiger
 \hyperref[itm:04-1]{personenbezogener Daten} zu verlangen. Unter Berücksichtigung der Zwecke der \hyperref[itm:04-2]
@@ -11,5 +9,5 @@ Berichtigung sie betreffender unrichtiger
  unvollständiger \hyperref[itm:04-1]{personenbezogener Daten} -- auch mittels einer ergänzenden Erklärung -- zu
  verlangen.
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
