--- a/artikel/24.tex
+++ b/artikel/24.tex
@@ -2,8 +2,6 @@
 \chapter{Verantwortung des für die Verarbeitung Verantwortlichen}
 \label{ch:24}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} setzt unter Berücksichtigung der Art, des Umfangs, der Umstände und der
@@ -26,5 +24,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
