--- a/artikel/31.tex
+++ b/artikel/31.tex
@@ -2,11 +2,9 @@
 \chapter{Zusammenarbeit mit der Aufsichtsbehörde}
 \label{ch:31}
 
-\addsec{Text der Verordnung}
-
 Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls
 deren \hyperref[itm:04-17]{Vertreter} arbeiten auf Anfrage mit der
 \hyperref[itm:04-21]{Aufsichtsbehörde} bei der Erfüllung ihrer Aufgaben zusammen.
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
