--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -2,8 +2,6 @@
 \chapter{Verbindliche interne Datenschutzvorschriften}
 \label{ch:47}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} genehmigt gemäß dem Kohärenzverfahren nach \hyperref
@@ -139,5 +137,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
