--- a/artikel/63.tex
+++ b/artikel/63.tex
@@ -2,11 +2,9 @@
 \chapter{Kohärenzverfahren}
 \label{ch:63}
 
-\addsec{Text der Verordnung}
-
 Um zur einheitlichen Anwendung dieser Verordnung in der gesamten Union beizutragen, arbeiten die \hyperref[itm:04-21]
 {Aufsichtsbehörden} im Rahmen des in diesem Abschnitt beschriebenen Kohärenzverfahrens untereinander und gegebenenfalls
 mit der Kommission zusammen.
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
