--- a/artikel/64.tex
+++ b/artikel/64.tex
@@ -2,8 +2,6 @@
 \chapter{Stellungnahme des Ausschusses}
 \label{ch:64}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Der Ausschuss gibt eine Stellungnahme ab, wenn die zuständige \hyperref[itm:04-21]
@@ -98,5 +96,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
