--- a/artikel/84.tex
+++ b/artikel/84.tex
@@ -2,8 +2,6 @@
 \chapter{Sanktionen}
 \label{ch:84}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Mitgliedstaaten legen die Vorschriften über andere Sanktionen für Verstöße gegen diese Verordnung --
@@ -18,5 +16,5 @@
 
 \end{enumerate}   
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
