--- a/artikel/85.tex
+++ b/artikel/85.tex
@@ -2,8 +2,6 @@
 \chapter{Verarbeitung und Freiheit der Meinungsäußerung und Informationsfreiheit}
 \label{ch:85}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Mitgliedstaaten bringen durch Rechtsvorschriften das Recht auf den Schutz \hyperref[itm:04-1]
@@ -17,7 +15,7 @@
    von \hyperref[part:2]{Kapitel II} (Grundsätze), \hyperref[part:3]{Kapitel III} (Rechte der \hyperref[itm:04-1]
    {betroffenen Person}), \hyperref[part:4]{Kapitel IV}(\hyperref[itm:04-7]{Verantwortlicher} und \hyperref[itm:04-8]
    {Auftragsverarbeiter}), \hyperref[part:5]{Kapitel V} (Übermittlung personenbezogener Daten an Drittländer oder
-   an \hyperref[itm:04-29]{internationale Organisationen}), \hyperref[part:6]{Kapitel VI}(Unabhängige \hyperref
+   an \hyperref[itm:04-26]{internationale Organisationen}), \hyperref[part:6]{Kapitel VI}(Unabhängige \hyperref
    [itm:04-21]{Aufsichtsbehörden}), \hyperref[part:7]{Kapitel VII}(Zusammenarbeit und Kohärenz) und \hyperref[part:9]
    {Kapitel IX} (Vorschriften für besondere Verarbeitungssituationen) vor, wenn dies erforderlich ist, um das Recht auf
    Schutz der \hyperref[itm:04-1]{personenbezogenen Daten} mit der Freiheit der Meinungsäußerung und der
@@ -30,5 +28,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
