--- a/artikel/88.tex
+++ b/artikel/88.tex
@@ -2,8 +2,6 @@
 \chapter{Datenverarbeitung im Beschäftigungskontext}
 \label{ch:88}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Mitgliedstaaten können durch Rechtsvorschriften oder durch Kollektivvereinbarungen spezifischere
@@ -31,5 +29,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
