--- a/artikel/89.tex
+++ b/artikel/89.tex
@@ -3,8 +3,6 @@
  wissenschaftlichen oder historischen Forschungszwecken und zu statistischen Zwecken}
 \label{ch:89}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-2]{Verarbeitung} zu im öffentlichen Interesse liegenden Archivzwecken, zu
@@ -43,5 +41,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
