--- a/artikel/94.tex
+++ b/artikel/94.tex
@@ -2,8 +2,6 @@
 \chapter{Aufhebung der Richtlinie 95/46/EG}
 \label{ch:94}
 
-\addsec{Text der Verordnung}
-
 \begin{enumerate}
 
   \item Die Richtlinie 95/46/EG wird mit Wirkung vom 25. Mai 2018 aufgehoben.\todo{Recherche}ﬂ%
@@ -18,5 +16,5 @@
 
 \end{enumerate}
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
