--- a/artikel/96.tex
+++ b/artikel/96.tex
@@ -2,12 +2,10 @@
 \chapter{Verhältnis zu bereits geschlossenen Übereinkünften}
 \label{ch:96}
 
-\addsec{Text der Verordnung}
-
 Internationale Übereinkünfte, die die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer
-oder \hyperref[itm:04-29]{internationale Organisationen} mit sich bringen, die von den Mitgliedstaaten vor dem 24. Mai
+oder \hyperref[itm:04-26]{internationale Organisationen} mit sich bringen, die von den Mitgliedstaaten vor dem 24. Mai
 2016 abgeschlossen wurden und die im Einklang mit dem vor diesem Tag geltenden Unionsrecht stehen, bleiben in Kraft,
 bis sie geändert, ersetzt oder gekündigt werden.
 
-\addsec{Eigene Notizen}
+% \addsec{Ergänzende Hinweise}
 
